--- a/VaccineC/src/app/pages/produto/produto.component.scss
+++ b/VaccineC/src/app/pages/produto/produto.component.scss
@@ -96,3 +96,13 @@ form {
   flex: 0 0 100px !important;
   white-space: unset !important;
 }
+
+.mat-column-Options {
+  flex: 0 0 100px !important;
+  white-space: unset !important;
+}
+
+.mat-cell-Options {
+  flex: 0 0 100px !important;
+  white-space: unset !important;
+}
