--- a/VaccineC/src/app/pages/empresa/empresas.component.scss
+++ b/VaccineC/src/app/pages/empresa/empresas.component.scss
@@ -7,6 +7,11 @@
   margin-bottom: 2rem;
 }
 
+.parameter-group {
+  font-size: 14px !important;
+}
+
+
 .search-table-content {
   padding-left: 0px;
   padding-right: 0px;
