--- a/VaccineC/src/app/pages/orcamentos/orcamentos.component.html
+++ b/VaccineC/src/app/pages/orcamentos/orcamentos.component.html
@@ -88,7 +88,7 @@
                     </div>
                 </mat-tab>
                 <!-- ORÇAMENTO TAB -->
-                <mat-tab label="Orçamento">
+                <mat-tab label="Orçamento" [disabled]="tabBudgetIsDisabled">
                     <mat-stepper #stepper class="example-stepper" [orientation]="(stepperOrientation | async)!">
                         <mat-step [stepControl]="budgetForm" label="Identificação">
                             <form [formGroup]="budgetForm" class="mt-3">
@@ -202,7 +202,9 @@
                                                         class="me-3 fa-solid fa-circle {{situationProductColor}}"></span>
 
                                                     <div>
-                                                        <div>{{element.Product.Name}}</div>
+                                                        <div>
+                                                            {{element.Product == null ? '' : element.Product.Name}}
+                                                        </div>
                                                         <div class="small-text">
                                                             {{resolveExibitionDoseType(element.ProductDose)}}</div>
                                                     </div>
@@ -493,6 +495,55 @@
                             </form>
                         </mat-step>
                     </mat-stepper>
+                </mat-tab>
+                <mat-tab label="Histórico" [disabled]="tabHistoricIsDisabled">
+                    <div class="search-table">
+                        <div class="col-sm-11 search-table-content mat-elevation-z2">
+                          <table class="col-sm-12" mat-table [dataSource]="dataSourceHistoric">
+            
+                            <!-- Register Column -->
+                            <ng-container matColumnDef="Register">
+                              <th mat-header-cell *matHeaderCellDef> Data </th>
+                              <td mat-cell *matCellDef="let row"> {{row.Register | date: 'dd/MM/yyyy H:mm'}} </td>
+                            </ng-container>
+            
+                            <!-- User + Person Column -->
+                            <ng-container matColumnDef="User">
+                              <th mat-header-cell *matHeaderCellDef> Usuário </th>
+                              <td mat-cell *matCellDef="let row">
+                                <div>
+                                    <div>{{row.User.Person.Name}}</div>
+                                    <div class="small-text">{{row.User.Email}}</div>
+                                </div>
+                              </td>
+                            </ng-container>
+
+                            <!-- Historic Column -->
+                            <ng-container matColumnDef="Historic">
+                                <th mat-header-cell *matHeaderCellDef> Histórico </th>
+                                <td mat-cell *matCellDef="let row">
+                                    {{row.Historic}}
+                                </td>
+                              </ng-container>
+            
+                            <!-- Id Hidden Column -->
+                            <ng-container matColumnDef="ID">
+                              <th mat-header-cell [hidden]="show" *matHeaderCellDef> ID </th>
+                              <td mat-cell [hidden]="show" *matCellDef="let row"> {{row.ID}} </td>
+                            </ng-container>
+
+                            <tr mat-header-row *matHeaderRowDef="displayedColumnsHistoric"></tr>
+                            <tr mat-row *matRowDef="let row; columns: displayedColumnsHistoric;" style="cursor:pointer;" class="hover-element-row"></tr>
+            
+                            <!-- Row shown when there is no matching data. -->
+                            <tr class="mat-row" *matNoDataRow>
+                              <td class="mat-cell" colspan="4">Nenhum registro encontrado.</td>
+                            </tr>
+                          </table>
+            
+                          <mat-paginator #paginatorHistoric="matPaginator" [pageSizeOptions]="[10, 25, 100]"></mat-paginator>
+                        </div>
+                      </div>
                 </mat-tab>
             </mat-tab-group>
         </app-container>
