--- a/VaccineC/src/app/pages/aplicacao/aplicacao-cadastro/aplication-dialog.html
+++ b/VaccineC/src/app/pages/aplicacao/aplicacao-cadastro/aplication-dialog.html
@@ -1,5 +1,5 @@
 <h2 mat-dialog-title>Aplicação</h2>
-<mat-dialog-content class="mat-typography">
+<mat-dialog-content class="mat-typography" style="max-height: initial;">
     <form>
         <div class="div-row-input mt-3">
             <mat-form-field appearance="fill" class="col-sm-12">
@@ -61,6 +61,6 @@
     </form>
 </mat-dialog-content>
 <mat-dialog-actions align="end">
-    <button mat-button mat-dialog-close color="primary">Cancelar</button>
-    <button mat-button [mat-dialog-close]="true" cdkFocusInitial>Salvar</button>
+    <button mat-flat-button mat-dialog-close color="primary">Cancelar</button>
+    <button mat-flat-button cdkFocusInitial class="create-button">Salvar</button>
 </mat-dialog-actions>
