--- a/VaccineC/src/app/pages/orcamentos/orcamentos.component.html
+++ b/VaccineC/src/app/pages/orcamentos/orcamentos.component.html
@@ -103,7 +103,7 @@
                                     <div class="div-row-input">
                                         <!-- PESSOA -->
                                         <mat-form-field appearance="fill" class="col-sm-12">
-                                            <mat-label>Pessoa</mat-label>
+                                            <mat-label>Responsável Financeiro</mat-label>
                                             <input (click)="searchPersonByAutoComplete()" type="text" #PersonIdinput
                                                 placeholder="Selecione a Pessoa" aria-label="Number" matInput
                                                 formControlName="PersonId" [matAutocomplete]="autoPerson"
