--- a/VaccineC/src/app/pages/agendamento/add-authorization-dialog.html
+++ b/VaccineC/src/app/pages/agendamento/add-authorization-dialog.html
@@ -1,20 +1,45 @@
+<style>
+    :host ::ng-deep #application-date-column {
+        padding: 0px !important;
+    }
+
+    :host ::ng-deep #application-date-column .mat-form-field-wrapper {
+        padding: 0px !important;
+    }
+
+    :host ::ng-deep #application-date-column .mat-form-field-infix {
+        border: 0px !important;
+        margin-top: 5px !important;
+    }
+
+
+
+</style>
 <div mat-dialog-title class="d-flex justify-content-between">
     <div mat-dialog-title>Agendamento</div>
-    <div title="Data de Agendamento" style="color:#858796;font-size: 13px;"><i class="fa-solid fa-calendar me-2"></i>{{authorizationDateFormated}}</div>
+    <div title="Data de Agendamento" id="teste" style="color:#858796;font-size: 13px;"><i
+            class="fa-solid fa-calendar me-2"></i>{{authorizationDateFormated}}</div>
 </div>
 <mat-dialog-content class="mat-typography">
     <form [formGroup]="authorizationForm">
         <div class="div-row-input d-flex mb-3" style="align-items:center;justify-content: center;">
             <div>
-                <div *ngIf="!profilePicExhibition" id="profilePicExhibition" style="background-image: url(../../../assets/img/default-profile-pic.png); width: 140px; height: 140px; background-size: cover; background-position: top center; border-radius: 50%; margin-right: 1.5rem; margin-left: 0.75rem;">
+                <div *ngIf="!profilePicExhibition" id="profilePicExhibition"
+                    style="background-image: url(../../../assets/img/default-profile-pic.png); width: 140px; height: 140px; background-size: cover; background-position: top center; border-radius: 50%; margin-right: 1.5rem; margin-left: 0.75rem;">
                 </div>
-                <img id="profilePicExhibition" *ngIf="profilePicExhibition" src="{{profilePicExhibition}}" alt="foto de perfil" style="background-image: url(../../../assets/img/default-profile-pic.png); width: 140px; height: 140px; background-size: cover; background-position: top center; border-radius: 50%; margin-right: 1.5rem; margin-left: 0.75rem;">
+                <img id="profilePicExhibition" *ngIf="profilePicExhibition" src="{{profilePicExhibition}}"
+                    alt="foto de perfil"
+                    style="background-image: url(../../../assets/img/default-profile-pic.png); width: 140px; height: 140px; background-size: cover; background-position: top center; border-radius: 50%; margin-right: 1.5rem; margin-left: 0.75rem;">
             </div>
-            <div class="col-sm-9" style="border-left-color: var(--cor-produto); border-radius: 3px; border-width: 0px 0px 0px 3px; border-style: solid; padding-left: 1.5em;">
+            <div class="col-sm-9"
+                style="border-left-color: var(--cor-produto); border-radius: 3px; border-width: 0px 0px 0px 3px; border-style: solid; padding-left: 1.5em;">
                 <mat-form-field appearance="fill" class="col-sm-12 person-field" style="padding-right:0px">
                     <mat-label>Pessoa</mat-label>
-                    <input (click)="searchPersonByAutoComplete()" type="text" #PersonIdinput placeholder="Selecione a Pessoa" aria-label="Number" matInput formControlName="PersonId" [matAutocomplete]="autoPerson" [(ngModel)]="personId" required>
-                    <mat-autocomplete #autoPerson="matAutocomplete" [displayWith]="displayStatePerson" (optionSelected)="onSelectionChanged($event)">
+                    <input (click)="searchPersonByAutoComplete()" type="text" #PersonIdinput
+                        placeholder="Selecione a Pessoa" aria-label="Number" matInput formControlName="PersonId"
+                        [matAutocomplete]="autoPerson" [(ngModel)]="personId" required>
+                    <mat-autocomplete #autoPerson="matAutocomplete" [displayWith]="displayStatePerson"
+                        (optionSelected)="onSelectionChanged($event)">
                         <mat-option *ngFor="let option of filteredOptions | async" [value]="option">
                             {{option.Name}}
                         </mat-option>
@@ -22,26 +47,32 @@
                     <mat-icon matSuffix>search</mat-icon>
                 </mat-form-field>
                 <div style="padding-left: 1.2em;" *ngIf="personPrincipalInfoVisible">
-                    <div class="mt-2"><i class="fa-solid fa-location-dot me-2 cor-produto"></i>{{personPrincipalAddress}}</div>
+                    <div class="mt-2"><i
+                            class="fa-solid fa-location-dot me-2 cor-produto"></i>{{personPrincipalAddress}}</div>
                     <div class="mt-2"><i class="fa-solid fa-phone me-2 cor-produto"></i>{{personPrincipalPhone}}</div>
                 </div>
                 <mat-divider class="mt-3" *ngIf="personPrincipalInfoVisible"></mat-divider>
             </div>
         </div>
         <div class="div-row-input d-flex mb-3 mt-5" style="margin-left:1rem;" *ngIf="personPrincipalInfoVisible">
-            
+
             <mat-form-field appearance="fill" class="col-sm-7">
                 <mat-label>Orçamento</mat-label>
-                <input (click)="searchBudgetByAutoComplete()" type="text" #BudgetIdinput placeholder="Selecione o Orçamento" aria-label="Number" matInput formControlName="BudgetId" [matAutocomplete]="autoBudget" [(ngModel)]="budgetId" required>
-                <mat-autocomplete #autoBudget="matAutocomplete" [displayWith]="displayStateBudget">
-                    <mat-option style="height:50px;line-height: 20px;" *ngFor="let budget of filteredBudgets | async" [value]="budget" multiLineOption>
+                <input (click)="searchBudgetByAutoComplete()" type="text" #BudgetIdinput
+                    placeholder="Selecione o Orçamento" aria-label="Number" matInput formControlName="BudgetId"
+                    [matAutocomplete]="autoBudget" [(ngModel)]="budgetId" required>
+                <mat-autocomplete #autoBudget="matAutocomplete" [displayWith]="displayStateBudget"
+                    (optionSelected)="onSelectionBudgetChanged($event)">
+                    <mat-option style="height:50px;line-height: 20px;" *ngFor="let budget of filteredBudgets | async"
+                        [value]="budget" multiLineOption>
                         <div matLine>{{budget.BudgetNumber}}</div>
-                        <div class="small-text" matLine>{{budget.Persons.Name}} - {{budget.Register | date: 'dd/MM/yyyy'}}</div>
+                        <div class="small-text" matLine>{{budget.Persons.Name}} - {{budget.Register | date:
+                            'dd/MM/yyyy'}}</div>
                     </mat-option>
                 </mat-autocomplete>
                 <mat-icon matSuffix>search</mat-icon>
             </mat-form-field>
-            
+
             <mat-form-field appearance="fill" class="col-sm-5">
                 <mat-label>Forma de Aplicação</mat-label>
                 <mat-select formControlName="TypeOfService" #TypeOfServiceInput [(ngModel)]="typeOfService" required>
@@ -50,9 +81,84 @@
                 </mat-select>
             </mat-form-field>
         </div>
+        <div class="div-row-input d-flex mb-3 mt-3" style="margin-left:1rem;" *ngIf="personPrincipalInfoVisible">
+            <div id="budget-product-table" style="width:100%;">
+                <div class="col-sm-12 search-table-content mat-elevation-z2">
+                    <table mat-table [dataSource]="dataSourceBudgetProduct" class="col-sm-12">
+
+                        <!-- Checkbox Column -->
+                        <ng-container matColumnDef="select">
+                            <th mat-header-cell *matHeaderCellDef style="width: 5rem;">
+                                <mat-checkbox (change)="$event ? toggleAllRows() : null"
+                                    [checked]="selection.hasValue() && isAllSelected()"
+                                    [indeterminate]="selection.hasValue() && !isAllSelected()"
+                                    [aria-label]="checkboxLabel()">
+                                </mat-checkbox>
+                            </th>
+                            <td mat-cell *matCellDef="let row" style="width: 5rem;">
+                                <mat-checkbox (click)="$event.stopPropagation()"
+                                    (change)="$event ? selection.toggle(row) : null"
+                                    [checked]="selection.isSelected(row)" [aria-label]="checkboxLabel(row)">
+                                </mat-checkbox>
+                            </td>
+                        </ng-container>
+
+                        <ng-container matColumnDef="ProductName">
+                            <th mat-header-cell *matHeaderCellDef> Produto </th>
+                            <td mat-cell *matCellDef="let element"> {{element.Product == null ? '' :
+                                element.Product.Name}} </td>
+                        </ng-container>
+
+                        <!-- Dose -->
+                        <ng-container matColumnDef="ProductDose">
+                            <th mat-header-cell *matHeaderCellDef> Dose </th>
+                            <td mat-cell *matCellDef="let element"> {{resolveExibitionDoseType(element.ProductDose)}}
+                            </td>
+                        </ng-container>
+
+                        <!-- Data Aplicação -->
+                        <ng-container matColumnDef="ApplicationDate">
+                            <th mat-header-cell *matHeaderCellDef> Agendar para </th>
+                            <td mat-cell *matCellDef="let element">
+                                <mat-form-field id="application-date-column" appearance="outline">
+                                    <input type="datetime-local" matInput formControlName="ApplicationDate"
+                                        [(ngModel)]="element.ApplicationDate">
+                                </mat-form-field>
+
+                            </td>
+                        </ng-container>
+
+                        <!-- Notificar -->
+                        <ng-container matColumnDef="toggle">
+                            <th mat-header-cell *matHeaderCellDef> Notificar </th>
+                            <td mat-cell *matCellDef="let element" >
+                                <mat-slide-toggle [checked]="element.Notify" [(ngModel)]="element.Notify" formControlName="Notify" (change)="updateActiveStatus(element)"></mat-slide-toggle>
+                            </td>
+                        </ng-container>
+
+                        <!-- Id Hidden Column -->
+                        <ng-container matColumnDef="ID">
+                            <th mat-header-cell [hidden]="true" *matHeaderCellDef> ID </th>
+                            <td mat-cell [hidden]="true" *matCellDef="let row"> {{row.ID}} </td>
+                        </ng-container>
+
+
+                        <tr mat-header-row *matHeaderRowDef="displayedColumnsBudgetProduct">
+                        </tr>
+                        <tr mat-row *matRowDef="let row; columns: displayedColumnsBudgetProduct;"
+                            class="hover-element-row" style="cursor:pointer;">
+                        </tr>
+                        <!-- Row shown when there is no matching data. -->
+                        <tr class="mat-row" *matNoDataRow>
+                            <td class="mat-cell" colspan="6">Nenhum registro encontrado.</td>
+                        </tr>
+                    </table>
+                </div>
+            </div>
+        </div>
     </form>
 </mat-dialog-content>
 <mat-dialog-actions align="end">
     <button mat-flat-button mat-dialog-close color="primary">Cancelar</button>
-    <button mat-flat-button class="create-button" cdkFocusInitial>Agendar</button>
+    <button mat-flat-button class="create-button" (click)="addAuthorization()" cdkFocusInitial>Agendar</button>
 </mat-dialog-actions>
