--- a/VaccineC/src/app/pages/agendamento/agendamento.component.scss
+++ b/VaccineC/src/app/pages/agendamento/agendamento.component.scss
@@ -1,13 +1,42 @@
-html, body {
-    margin: 0;
-    padding: 0;
-    font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
-    font-size: 14px;
-  }
-  
-  #calendar {
-    max-width: 1100px;
-    margin: 40px auto;
-  }
+html,
+body {
+  margin: 0;
+  padding: 0;
+  font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
+  font-size: 14px;
+}
 
-  
+#calendar {
+  max-width: 1100px;
+  margin: 40px auto;
+}
+
+:host ::ng-deep .fc-event-time {
+  display: none;
+}
+
+:host ::ng-deep .fc-timegrid-slots table tbody tr{
+  height: 2rem !important;
+}
+
+:host ::ng-deep .fc-timegrid-now-indicator-line {
+  left: 44px !important;
+  right: 0;
+  background-color: var(--cor-produto) !important;
+  height: 2px;
+  margin: 0;
+  border: none;
+  margin-left: -45px;
+}
+
+:host ::ng-deep .fc-timegrid-now-indicator-arrow {
+  background-color: var(--cor-produto) !important;
+  border-color: var(--cor-produto) !important;
+  content: "";
+  display: block;
+  width: 15px;
+  height: 15px;
+  border-radius: 50%;
+  margin-top: -7px;
+  margin-left: 31px;
+}
