--- a/VaccineC/src/app/pages/agendamento/agendamento.component.scss
+++ b/VaccineC/src/app/pages/agendamento/agendamento.component.scss
@@ -15,7 +15,7 @@ body {
   display: none;
 }
 
-:host ::ng-deep .fc-timegrid-slots table tbody tr{
+:host ::ng-deep .fc-timegrid-slots table tbody tr {
   height: 2rem !important;
 }
 
@@ -39,4 +39,13 @@ body {
   border-radius: 50%;
   margin-top: -7px;
   margin-left: 31px;
+}
+
+:host ::ng-deep .fc-timegrid-event-harness {
+  cursor: pointer !important;
+}
+
+:host ::ng-deep #is-content {
+  padding-right: 3rem !important;
+  padding-left: 3rem !important;
 }
