--- a/VaccineC/src/app/pages/agendamento/add-authorization-dialog.html
+++ b/VaccineC/src/app/pages/agendamento/add-authorization-dialog.html
@@ -11,14 +11,10 @@
         border: 0px !important;
         margin-top: 5px !important;
     }
-
-
-
 </style>
 <div mat-dialog-title class="d-flex justify-content-between">
     <div mat-dialog-title>Agendamento</div>
-    <div title="Data de Agendamento" id="teste" style="color:#858796;font-size: 13px;"><i
-            class="fa-solid fa-calendar me-2"></i>{{authorizationDateFormated}}</div>
+    <div title="Data de Agendamento" id="teste" style="color:#858796;font-size: 13px;"><i class="fa-solid fa-calendar me-2"></i>{{authorizationDateFormated}}</div>
 </div>
 <mat-dialog-content class="mat-typography">
     <form [formGroup]="authorizationForm">
@@ -47,9 +43,14 @@
                     <mat-icon matSuffix>search</mat-icon>
                 </mat-form-field>
                 <div style="padding-left: 1.2em;" *ngIf="personPrincipalInfoVisible">
-                    <div class="mt-2"><i
-                            class="fa-solid fa-location-dot me-2 cor-produto"></i>{{personPrincipalAddress}}</div>
-                    <div class="mt-2"><i class="fa-solid fa-phone me-2 cor-produto"></i>{{personPrincipalPhone}}</div>
+                    <div class="mt-2" title="Endereço Principal">
+                        <i class="fa-solid fa-location-dot me-2 cor-produto"></i>
+                        {{personPrincipalAddress}}
+                    </div>
+                    <div class="mt-2" title="Telefone Principal">
+                        <i class="fa-solid fa-phone me-2 cor-produto"></i>
+                        {{personPrincipalPhone}}
+                    </div>
                 </div>
                 <mat-divider class="mt-3" *ngIf="personPrincipalInfoVisible"></mat-divider>
             </div>
