--- a/VaccineC/src/app/pages/agendamento/agendamento.component.scss
+++ b/VaccineC/src/app/pages/agendamento/agendamento.component.scss
@@ -12,7 +12,7 @@ body {
 }
 
 :host ::ng-deep .fc-event-time {
-  display: none;
+  font-size: 0px;
 }
 
 :host ::ng-deep .fc-timegrid-slots table tbody tr {
@@ -26,19 +26,21 @@ body {
   height: 2px;
   margin: 0;
   border: none;
+  opacity: 0.5;
   margin-left: -45px;
 }
 
 :host ::ng-deep .fc-timegrid-now-indicator-arrow {
-  background-color: var(--cor-produto) !important;
-  border-color: var(--cor-produto) !important;
   content: "";
   display: block;
-  width: 15px;
-  height: 15px;
-  border-radius: 50%;
+  width: 0;
+  height: 0;
   margin-top: -7px;
-  margin-left: 31px;
+  opacity: 0.5;
+  margin-left: 37px;
+  border-left: 10px solid var(--cor-produto) !important;
+  border-top: 9px solid transparent;
+  border-bottom: 9px solid transparent;
 }
 
 :host ::ng-deep .fc-timegrid-event-harness {
