--- a/VaccineC/src/app/pages/agendamento/agendamento.component.scss
+++ b/VaccineC/src/app/pages/agendamento/agendamento.component.scss
@@ -51,3 +51,13 @@ body {
   padding-right: 3rem !important;
   padding-left: 3rem !important;
 }
+
+.situation-pending {
+  background-color: #3788d8 !important; 
+  border-color:  #3788d8 !important; 
+}
+
+.situation-finalized {
+  background-color: #37d89d !important; 
+  border-color:  #37d89d !important; 
+}
