--- a/VaccineC/src/app/pages/agendamento/search-authorization-dialog.html
+++ b/VaccineC/src/app/pages/agendamento/search-authorization-dialog.html
@@ -142,14 +142,14 @@ form {
                 <ng-container matColumnDef="Options">
                     <th mat-header-cell *matHeaderCellDef> </th>
                     <td mat-cell *matCellDef="let row">
-                        <button mat-icon-button color="primary" title="Visualizar">
+                        <button mat-icon-button color="primary" title="Visualizar" (click)="openUpdateAuthorizationDialog(row.Event.ID)">
                             <i class="fa-solid fa-eye"></i>
                         </button>
                     </td>
                 </ng-container>
 
                 <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-                <tr class="hover-element-row" mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+                <tr class="hover-element-row" mat-row *matRowDef="let row; columns: displayedColumns;"(dblclick)="openUpdateAuthorizationDialog(row.Event.ID)" style="cursor:pointer;"></tr>
 
                 <!-- Row shown when there is no matching data. -->
                 <tr class="mat-row" *matNoDataRow>
