--- a/VaccineC/src/app/pages/agendamento/add-authorization-dialog.html
+++ b/VaccineC/src/app/pages/agendamento/add-authorization-dialog.html
@@ -11,12 +11,18 @@
         border: 0px !important;
         margin-top: 5px !important;
     }
+
+    .cdk-overlay-pane,
+    .md-overlay-pane {
+        height: auto !important;
+    }
 </style>
 <div mat-dialog-title class="d-flex justify-content-between">
     <div mat-dialog-title>Agendamento</div>
-    <div title="Data de Agendamento" id="teste" style="color:#858796;font-size: 13px;"><i class="fa-solid fa-calendar me-2"></i>{{authorizationDateFormated}}</div>
+    <div title="Data de Agendamento" id="teste" style="color:#858796;font-size: 13px;"><i
+            class="fa-solid fa-calendar me-2"></i>{{authorizationDateFormated}}</div>
 </div>
-<mat-dialog-content class="mat-typography">
+<mat-dialog-content class="mat-typography" style="max-height: 70vh">
     <form [formGroup]="authorizationForm">
         <div class="div-row-input d-flex mb-3" style="align-items:center;justify-content: center;">
             <div>
@@ -40,8 +46,10 @@
                             {{option.Name}}
                         </mat-option>
                     </mat-autocomplete>
-                    <mat-error *ngIf="authorizationForm.controls.PersonId.touched && authorizationForm.controls.PersonId.invalid">
-                        <span *ngIf="authorizationForm.controls.PersonId.errors?.required">A Pessoa é obrigatória.</span>
+                    <mat-error
+                        *ngIf="authorizationForm.controls.PersonId.touched && authorizationForm.controls.PersonId.invalid">
+                        <span *ngIf="authorizationForm.controls.PersonId.errors?.required">A Pessoa é
+                            obrigatória.</span>
                     </mat-error>
                     <mat-icon matSuffix>search</mat-icon>
                 </mat-form-field>
@@ -62,7 +70,7 @@
                 <mat-divider class="mt-3" *ngIf="personPrincipalInfoVisible"></mat-divider>
             </div>
         </div>
-        <div class="div-row-input d-flex mb-3 mt-5" style="margin-left:1rem;" *ngIf="personPrincipalInfoVisible">
+        <div class="div-row-input d-flex mb-2 mt-5" style="margin-left:1rem;" *ngIf="personPrincipalInfoVisible">
 
             <mat-form-field appearance="fill" class="col-sm-7">
                 <mat-label>Orçamento</mat-label>
@@ -78,7 +86,8 @@
                             'dd/MM/yyyy'}}</div>
                     </mat-option>
                 </mat-autocomplete>
-                <mat-error *ngIf="authorizationForm.controls.BudgetId.touched && authorizationForm.controls.BudgetId.invalid">
+                <mat-error
+                    *ngIf="authorizationForm.controls.BudgetId.touched && authorizationForm.controls.BudgetId.invalid">
                     <span *ngIf="authorizationForm.controls.BudgetId.errors?.required">O Orçamento é obrigatório.</span>
                 </mat-error>
                 <mat-icon matSuffix>search</mat-icon>
@@ -90,9 +99,21 @@
                     <mat-option value="C">NA CLÍNICA</mat-option>
                     <mat-option value="D">A DOMICÍLIO</mat-option>
                 </mat-select>
-                <mat-error *ngIf="authorizationForm.controls.TypeOfService.touched && authorizationForm.controls.TypeOfService.invalid">
-                    <span *ngIf="authorizationForm.controls.TypeOfService.errors?.required">O Tipo de Aplicação é obrigatório.</span>
+                <mat-error
+                    *ngIf="authorizationForm.controls.TypeOfService.touched && authorizationForm.controls.TypeOfService.invalid">
+                    <span *ngIf="authorizationForm.controls.TypeOfService.errors?.required">O Tipo de Aplicação é
+                        obrigatório.</span>
                 </mat-error>
+            </mat-form-field>
+        </div>
+        <div class="div-row-input d-flex mb-3" style="margin-left:1rem;" *ngIf="isNotifyChecked">
+            <mat-form-field appearance="fill" class="col-sm-7">
+                <mat-label>Selecionar Telefone</mat-label>
+                <mat-select formControlName="PersonPhone" #PersonPhoneInput [(ngModel)]="personPhone">
+                    <mat-option *ngFor="let cellphone of cellphonesList" [value]="cellphone">{{cellphone.CodeArea}}{{cellphone.NumberPhone}}
+                    </mat-option>
+                </mat-select>
+                
             </mat-form-field>
         </div>
         <div class="div-row-input d-flex mb-3 mt-3" style="margin-left:1rem;" *ngIf="personPrincipalInfoVisible">
@@ -145,8 +166,9 @@
                         <!-- Notificar -->
                         <ng-container matColumnDef="toggle">
                             <th mat-header-cell *matHeaderCellDef> Notificar </th>
-                            <td mat-cell *matCellDef="let element" >
-                                <mat-slide-toggle [checked]="element.Notify" [(ngModel)]="element.Notify" formControlName="Notify" (change)="updateActiveStatus(element)"></mat-slide-toggle>
+                            <td mat-cell *matCellDef="let element">
+                                <mat-slide-toggle [checked]="element.Notify" [(ngModel)]="element.Notify"
+                                    formControlName="Notify" (change)="updateActiveStatus(element.Notify)"></mat-slide-toggle>
                             </td>
                         </ng-container>
 
